@@ -2,6 +2,7 @@ package com.sprint.mission.discodeit.repository.file;
 
 import com.sprint.mission.discodeit.entity.Channel;
 import com.sprint.mission.discodeit.repository.ChannelRepository;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.boot.autoconfigure.condition.ConditionalOnProperty;
 import org.springframework.stereotype.Repository;
 
@@ -12,16 +13,16 @@ import java.nio.file.Paths;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 @Repository
 @ConditionalOnProperty(name = "discodeit.repository.type", havingValue = "file")
 public class FileChannelRepository implements ChannelRepository {
 
-    private static final Path dirPath = Paths.get(System.getProperty("user.dir") + "/data/channels");
+    private final Path dirPath;
 
-    public FileChannelRepository() {
+    public FileChannelRepository(@Value("${discodeit.repository.file-directory}") String dir) {
+        this.dirPath = Paths.get(dir + "/channels");
         init();
     }
 
@@ -43,9 +44,15 @@ public class FileChannelRepository implements ChannelRepository {
 
     @Override
     public Optional<Channel> findById(UUID channelId) {
-        return findAll().stream()
-                .filter(channel -> channel.getId().equals(channelId))
-                .findAny();
+        Path path = dirPath.resolve(channelId + ".ser");
+        if (!Files.exists(path)) {
+            return Optional.empty();
+        }
+        try (ObjectInputStream ois = new ObjectInputStream(Files.newInputStream(path))) {
+            return Optional.ofNullable((Channel) ois.readObject());
+        } catch (IOException | ClassNotFoundException e) {
+            throw new RuntimeException("채널 데이터 조회 실패", e);
+        }
     }
 
     @Override
@@ -56,39 +63,31 @@ public class FileChannelRepository implements ChannelRepository {
         try (Stream<Path> stream = Files.list(dirPath)) {
             return stream
                     .map(path -> {
-                        try (
-                                FileInputStream fis = new FileInputStream(path.toFile());
-                                ObjectInputStream ois = new ObjectInputStream(fis)
-                        ) {
-                            Object data = ois.readObject();
-                            return (Channel) data;
+                        try (ObjectInputStream ois = new ObjectInputStream(Files.newInputStream(path))) {
+                            return (Channel) ois.readObject();
                         } catch (IOException | ClassNotFoundException e) {
-                            throw new RuntimeException(e);
+                            throw new RuntimeException("채널 데이터 조회 실패", e);
                         }
                     })
-                    .collect(Collectors.toList());
+                    .toList();
         } catch (IOException e) {
-            throw new RuntimeException(e);
+            throw new RuntimeException("채널 데이터 목록 조회 실패", e);
         }
     }
 
     @Override
     public void delete(Channel channel) {
-        File file = new File(dirPath.toFile(), channel.getId().toString() + ".ser");
-
-        if (file.exists()) {
-            if (!file.delete()) {
-                throw new RuntimeException("채널 파일 삭제 실패");
-            }
+        Path path = dirPath.resolve(channel.getId() + ".ser");
+        try {
+            Files.deleteIfExists(path);
+        } catch (IOException e) {
+            throw new RuntimeException("채널 데이터 삭제 실패", e);
         }
     }
 
     private void writeToFile(Channel channel) {
-        File file = new File(dirPath.toFile(), channel.getId().toString() + ".ser");
-        try (
-                FileOutputStream fos = new FileOutputStream(file);
-                ObjectOutputStream oos = new ObjectOutputStream(fos)
-        ) {
+        Path path = dirPath.resolve(channel.getId() + ".ser");
+        try (ObjectOutputStream oos = new ObjectOutputStream(Files.newOutputStream(path))) {
             oos.writeObject(channel);
         } catch (IOException e) {
             throw new RuntimeException("채널 데이터 저장 실패", e);
