@@ -2,6 +2,7 @@ package com.sprint.mission.discodeit.repository.file;
 
 import com.sprint.mission.discodeit.entity.Message;
 import com.sprint.mission.discodeit.repository.MessageRepository;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.boot.autoconfigure.condition.ConditionalOnProperty;
 import org.springframework.stereotype.Repository;
 
@@ -12,16 +13,17 @@ import java.nio.file.Paths;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
+
 import java.util.stream.Stream;
 
 @Repository
 @ConditionalOnProperty(name = "discodeit.repository.type", havingValue = "file")
 public class FileMessageRepository implements MessageRepository {
 
-    private static final Path dirPath = Paths.get(System.getProperty("user.dir") + "/data/messages");
+    private final Path dirPath;
 
-    public FileMessageRepository() {
+    public FileMessageRepository(@Value("${discodeit.repository.file-directory}") String dir) {
+        this.dirPath = Paths.get(dir + "/messages");
         init();
     }
 
@@ -43,9 +45,15 @@ public class FileMessageRepository implements MessageRepository {
 
     @Override
     public Optional<Message> findById(UUID messageId) {
-        return findAll().stream()
-                .filter(message -> message.getId().equals(messageId))
-                .findAny();
+        Path path = dirPath.resolve(messageId + ".ser");
+        if (!Files.exists(path)) {
+            return Optional.empty();
+        }
+        try (ObjectInputStream ois = new ObjectInputStream(Files.newInputStream(path))){
+            return Optional.ofNullable((Message) ois.readObject());
+        } catch (IOException | ClassNotFoundException e) {
+            throw new RuntimeException("메시지 데이터 조회 실패", e);
+        }
     }
 
     @Override
@@ -56,38 +64,31 @@ public class FileMessageRepository implements MessageRepository {
         try (Stream<Path> stream = Files.list(dirPath)){
             return stream
                     .map(path -> {
-                        try (
-                                FileInputStream fis = new FileInputStream(path.toFile());
-                                ObjectInputStream ois = new ObjectInputStream(fis)
-                        ) {
-                            Object data = ois.readObject();
-                            return (Message) data;
+                        try (ObjectInputStream ois = new ObjectInputStream(Files.newInputStream(path))) {
+                            return (Message) ois.readObject();
                         } catch (IOException | ClassNotFoundException e) {
-                            throw new RuntimeException(e);
+                            throw new RuntimeException("메시지 데이터 조회 실패", e);
                         }
                     })
-                    .collect(Collectors.toList());
+                    .toList();
         } catch (IOException e) {
-            throw new RuntimeException(e);
+            throw new RuntimeException("메시지 데이터 목록 조회 실패", e);
         }
     }
 
     @Override
     public void delete(Message message) {
-        File file = new File(dirPath.toFile(), message.getId().toString() + ".ser");
-        if (file.exists()) {
-            if (!file.delete()) {
-                throw new RuntimeException("메시지 파일 삭제 실패");
-            }
+        Path path = dirPath.resolve(message.getId() + ".ser");
+        try {
+            Files.deleteIfExists(path);
+        } catch (IOException e) {
+            throw new RuntimeException("메시지 데이터 삭제 실패", e);
         }
     }
 
     private void writeToFile(Message message) {
-        File file = new File(dirPath.toFile(), message.getId().toString() + ".ser");
-        try (
-                FileOutputStream fos = new FileOutputStream(file);
-                ObjectOutputStream oos = new ObjectOutputStream(fos)
-        ) {
+        Path path = dirPath.resolve(message.getId() + ".ser");
+        try (ObjectOutputStream oos = new ObjectOutputStream(Files.newOutputStream(path))) {
             oos.writeObject(message);
         } catch (IOException e) {
             throw new RuntimeException("메시지 데이터 저장 실패", e);
